--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ nav {
         font-size: 18px;
         top: 50px;
         left: 20%;
+        
     }
 
     .content h1 {
@@ -183,6 +184,7 @@ nav {
         font-size: 16px;
         top: 40px;
         left: 25%;
+        padding: 0px 0px 0px 25px;
     }
 
     .container {
