Second Attempt for Club Name adjustment

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ nav {
         font-size: 18px;
         top: 50px;
         left: 20%;
-        
+        padding: 0px 0px 0px 25px;
     }
 
     .content h1 {
