--- a/style.css
+++ b/style.css
@@ -122,6 +122,12 @@ nav {
         top: 10%;
 
      }
+    .club-name {
+        font-size: 16px;
+        top: 40px;
+        left: 25%;
+        padding: 0px 0px 0px 25px;
+    }
     .content {
         margin-left: 0;
     }
