--- a/style2.css
+++ b/style2.css
@@ -155,7 +155,7 @@ tr:nth-child(odd) {
     }
 }
 
-.lets_btn {
+.lets_btn  {
     display: inline-block;
     padding: 20px 50px;
     text-decoration: none;
@@ -166,7 +166,7 @@ tr:nth-child(odd) {
     border-radius: 30px;
     transition: all 0.3s ease-in-out;
     border: none;
-    transition: all 0.3s ease-in-out; box-shadow 0.2s ease-in-out;
+    transition: all 0.3s ease-in-out; box-shadow:0.2s ease-in-out;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     animation: gradientChange 4s infinite alternate;
     animation-duration: 2s;
@@ -183,14 +183,14 @@ tr:nth-child(odd) {
 }
 
 /* Hover effect */
-.lets_btn:hover {
+.lets_btn:hover a{
     transform: scale(1.1);
     background: linear-gradient(45deg, #305cd7, #48c6df);
     box-shadow: 0 15px 25px rgba(48, 92, 215, 0.5);
 }
 
 /* Click effect */
-.lets_btn:active {
+.lets_btn:active a {
     transform: scale(0.1);
     box-shadow: 0 5px 10px rgba(48, 92, 215, 0.3);
 }
