--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,3 @@
-/* Reset Styles */
 * {
     margin: 0;
     padding: 0;
@@ -13,15 +12,18 @@
 
 /* Navbar */
 nav {
+ 
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    width: 100%;
+    padding: 35px 10%;
+    gap: 10px;
 }
 
-/* Logo */
 .logo {
     width: 120px;
-    position: absolute;
+    position:static;
     top: 20px;
     left: 3%; /* Moves it further left */
 }
@@ -30,7 +32,7 @@ nav {
     font-size: 22px;
     font-weight: bold;
     color: #222;
-    position: absolute;
+    position: static;
     top: 60px;
     left: 12%;
 }
@@ -133,12 +135,6 @@ tr:nth-child(odd) {
     margin-bottom: 10px;
     margin-left: 4%;
 }
-.regis {
-    text-align: left;
-    width: 100%;
-    margin-top: 20px;
-}
-
 
 /* Gradient Animation */
 
@@ -218,28 +214,45 @@ tr:nth-child(odd) {
     .lets_btn {
         padding: 15px 40px;
     }
+    .regis{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
 }
+
 
 @media (max-width: 768px) {
     .hero {
+        padding: 20px 5%;
+    }
+    nav {
+        display: flex;
+        flex-direction: row; /* Keep in a row */
+        justify-content: flex-start; /* Align to left */
+        align-items: center;
+        text-align: left;
         padding: 20px 5%;
     }
 
     .logo {
         width: 100px;
         position: relative;
-        top: 0;
-        left: 0;
-        margin-bottom: 10px;
+        margin-left: 0; /* Align to the left */
+        margin-bottom: 0;
+        width: 80px;
+        left: 2%;
     }
 
     .club-name {
         font-size: 18px;
         position: relative;
-        top: 0;
-        left: 0;
-        margin-bottom: 10px;
+        margin-left: 10px; /* Keep a small gap between logo and name */
+        margin-bottom: 0;
+        left: 6%;
     }
+
 
     .container {
         flex-direction: column;
@@ -265,6 +278,11 @@ tr:nth-child(odd) {
         font-size: 16px;
         animation: gradientChangeMobile 4s infinite alternate;
     }
+    .regis table {
+        width: 100%;
+        margin-top: 10px;
+    }
+
 }
 
 @media (max-width: 480px) {
@@ -276,7 +294,7 @@ tr:nth-child(odd) {
         width: 80px;
         position: relative;
         top: 0;
-        left: 0;
+        left: 10%;
         margin-bottom: 10px;
     }
 
@@ -284,9 +302,10 @@ tr:nth-child(odd) {
         font-size: 16px;
         position: relative;
         top: 0;
-        left: 0;
+        left: 10%;
         margin-bottom: 10px;
     }
+
 
     .container {
         flex-direction: column;
@@ -319,4 +338,4 @@ tr:nth-child(odd) {
         max-width: 400px;
         margin-top: 10px;
     }
-}
+} 
