--- a/mem_style.css
+++ b/mem_style.css
@@ -56,7 +56,20 @@ body {
     color: #FFF;
     font-size: 20px;
     cursor: pointer;
-    padding: 10px;
+    margin: 10px;
+}
+.button :hover{
+    background-color: black;
+    color: white;
+}
+a{
+    text-decoration: none;
+    color: black;
+    padding: 15px;
+}
+a:visited {
+    text-decoration: none;
+    color: black;
 }
 
 /* TEAM SECTION */
@@ -64,7 +77,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 50px;
-    padding: 50px;
+    padding: 20px;
 }
 
 .member {
@@ -77,7 +90,7 @@ body {
 }
 
 .member img {
-    width: 200px; /* Adjust width as needed */
+    width: 150px; /* Adjust width as needed */
     height: auto; /* Maintain original aspect ratio */
     box-shadow: 4px 4px 15px rgba(255, 94, 0, 0.7);
 }
